2008-05-21  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/parts.py (ComponentsView.update): Sort the
	component list by component type, similar to the xml file.

	* flumotion/test/test_greeter.py (WizardTest.testGreeter): Remove test
	which checks auth_method_combo, which now is gone

	* flumotion/admin/gtk/connections.py (Authenticate.__init__):
	* data/glade/authenticate.glade:
	Remove the label and combobox for authentication method, since we
	only support one kind of method right now.

	* data/glade/production-wizard.glade: Change on demand radiobutton
	label to "Stream files on demand"

	* flumotion/admin/gtk/parts.py (ComponentsView._add_columns):
	Rename the mood column to status

	* flumotion/ui/wizard.py (SectionWizard._updateButtons): Use finish
	instead of apply when completing the wizard

	* flumotion/admin/gtk/client.py
	(AdminClientWindow._import_configuration)
	(AdminClientWindow._export_configuration): Import and Export dialogs
	should use a verb instead of just OK to confirm the dialog.

	* flumotion/wizard/consumptionsteps.py (HTTPConsumptionStep.section):
	Rename the streaming page from HTTP to HTTP Streaming.

	* data/image/16x16/Makefile.am:
	* data/image/16x16/pause.png:
	* data/image/24x24/Makefile.am:
	* data/image/24x24/pause.png:
	* flumotion/admin/gtk/client.py:
	Create a stop icon and use it instead of pause in the
	admin ui.

2008-05-21  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/plugs/cortado/cortado.xml: Change the
	description of the cortado plugin to be
	"Publish embedded Java player page"

	* flumotion/admin/gtk/dialogs.py: refactor already_connected_message
	into showConnectionErrorDialog.

	* flumotion/admin/gtk/client.py (AdminClientWindow._create_ui):
	Change the menu label to be "Connect to running manager"

2008-05-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/process.py:
	  Remove process with parent pid 1 before looping over them.
